2010-06-24  MORITA Hajime  <morrita@google.com>

        Reviewed by Eric Seidel.

        rebaseline-chromium-webkit-tests should add or remove files to local git repository
        https://bugs.webkit.org/show_bug.cgi?id=41153

        - Added SCM.add() and SCM.remove()
        - Replaced "svn add" and "svn remove"
          rebaseline_chromium_webkit_tests.py: in with SCM method equivalents.
        - add "-U" and "-q" options to rebaseline_chromium_webkit_tests.py
          for debugging purpose.

        * Scripts/webkitpy/common/checkout/scm.py:
        * Scripts/webkitpy/common/checkout/scm_unittest.py:
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:

2010-06-25  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Improve default value handling for page format properties.
        https://bugs.webkit.org/show_bug.cgi?id=41150

        * DumpRenderTree/LayoutTestController.cpp:
        (parsePageNumber):
        (parsePageNumberSizeMarings):
        (pageSizeAndMarginsInPixelsCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::pageSizeAndMarginsInPixels):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::pageSizeAndMarginsInPixels):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::pageSizeAndMarginsInPixels):

2010-06-21  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Support for setCustomPolicyDelegate

        https://bugs.webkit.org/show_bug.cgi?id=39564

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setCustomPolicyDelegate):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-06-26  Robert Hogan  <robert@webkit.org>
